Changes on review comments